--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 rust-version = "1.67"
 
 [dependencies]
+chrono = "0.4.38"
 glob = "0.3.1"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
