--- a/action.yml
+++ b/action.yml
@@ -54,4 +54,4 @@ runs:
     - name: Run Action
       shell: bash
       id: run
-      run: ./${{ runner.os }}/${{ env.binary_name }} "${{ inputs.error }}"
+      run: echo $COMMIT_SHA; ./${{ runner.os }}/${{ env.binary_name }} "${{ inputs.error }}"
