clean docker files and enable manual testing

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -5,6 +5,7 @@ on:
   workflow_run:
     workflows: ["Release"]
     types: ["completed"]
+  workflow_dispatch:
 jobs:
   test:
     runs-on: ubuntu-latest
