--- a/action.yml
+++ b/action.yml
@@ -21,32 +21,38 @@ runs:
     - name: Set reusable variables
       shell: bash
       run: |
-        echo "action_repo=conda-dep-check" >> $GITHUB_ENV
-        echo "action_org=DanW97" >> $GITHUB_ENV
-        echo "binary_name=conda-dep-check" >> $GITHUB_ENV
+        echo "ACTION_REPO=conda-dep-check" >> $GITHUB_ENV
+        echo "ACTION_ORG=DanW97" >> $GITHUB_ENV
+        echo "BINARY_NAME=conda-dep-check" >> $GITHUB_ENV
         echo "COMMIT_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
     - name: Add binary extension
       shell: bash
       if: runner.os == 'Windows'
-      run: echo "binary_name=${{ env.binary_name }}.exe" >> $GITHUB_ENV
+      run: echo "BINARY_NAME=${{ env.BINARY_NAME }}.exe" >> $GITHUB_ENV
 
     - name: Get Action Version
       id: get_action_version
       shell: pwsh
       run: |
         $finalComponent = Split-Path -Leaf ${{ github.action_path }}
-        if ($finalComponent -eq "${{ env.action_repo }}") {
+        if ($finalComponent -eq "${{ env.ACTION_REPO }}") {
           $version = ""
         } else {
           $version = $finalComponent
         }
         Write-Output "version=$version" >> $Env:GITHUB_OUTPUT
 
+    - name: Add action version to env
+      shell: bash
+      run: |
+        echo "PKG_VERSION=${{ steps.get_action_version.outputs.version }}" >> $GITHUB_ENV
+
+
     - name: Download Action
       shell: bash
       run: |
-        gh release download ${{ steps.get_action_version.outputs.version }} --repo ${{ env.action_org }}/${{ env.action_repo }} --pattern '${{ runner.os }}.tgz'
+        gh release download ${{ steps.get_action_version.outputs.version }} --repo ${{ env.ACTION_ORG }}/${{ env.ACTION_REPO }} --pattern '${{ runner.os }}.tgz'
         tar -xzf ${{ runner.os }}.tgz
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
@@ -54,4 +60,4 @@ runs:
     - name: Run Action
       shell: bash
       id: run
-      run: echo $COMMIT_SHA; ./${{ runner.os }}/${{ env.binary_name }}
+      run: ./${{ runner.os }}/${{ env.BINARY_NAME }}
