--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
       shell: bash
       run: |
         echo ${GITHUB_ACTION_PATH}
-        finalComponent=$(basename "${GITHUB_ACTION_PATH}")
+        finalComponent=$(basename $(realpath "${GITHUB_ACTION_PATH}"))
         echo $finalComponent
         if [[ "$finalComponent" == "$ACTION_REPO" ]]; then
           version=""
