--- a/.github/workflows/rust_checks.yml
+++ b/.github/workflows/rust_checks.yml
@@ -8,7 +8,8 @@ jobs:
         id: get_action_version
         shell: bash
         run: |
-          finalComponent=$(basename $(realpath ${GITHUB_ACTION_PATH}))
+          echo ${GITHUB_ACTION_PATH}
+          finalComponent=$(basename "${GITHUB_ACTION_PATH}")
           if [[ "$finalComponent" == "$ACTION_REPO" ]]; then
             version=""
           else
@@ -28,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update Rust
         run: |
-          # Act's Ubuntu image doesn't include rustup, install it to enable local testing.
+          # Act's Ubuntu image
           if ! command -v rustup &> /dev/null
           then
             echo "Installing Rust"
