--- a/.github/workflows/rust_checks.yml
+++ b/.github/workflows/rust_checks.yml
@@ -6,7 +6,7 @@ jobs:
   checks:
     runs-on: ubuntu-latest
     steps:
-      - name: Get action version
+      # - name: Get action version
       - id: get_version
         uses: battila7/get-version-action@v2
 
